<resources>
    <string name="app_name">Xi</string>
    <string name="action_left_end">Move to the left end of line</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_goto">Goto line…</string>
    <string name="action_search">Search…</string>
    <string name="action_redo">Redo</string>
    <string name="action_right_end">Move to the left end of line</string>
    <string name="title_activity_browser">BrowserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="file_icon">File icon.</string>
</resources>
